--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# ---- Custom additions ----
+# Ignore all CSV files
+*.csv
+
+# Ignore entire data folder (and its contents)
+data/
